crates/ruff/src/rules/flake8_unused_arguments/snapshots/ruff__rules__flake8_unused_arguments__tests__ARG002_ARG.py.snap
---
source: crates/ruff/src/rules/flake8_unused_arguments/mod.rs
---
ARG.py:37:17: ARG002 Unused method argument: `x`
   |
35 |     # Unused arguments.
36 |     ###
37 |     def f(self, x):
   |                 ^ ARG002
38 |         print("Hello, world!")
   |

ARG.py:40:20: ARG002 Unused method argument: `x`
   |
38 |         print("Hello, world!")
39 | 
40 |     def f(self, /, x):
   |                    ^ ARG002
41 |         print("Hello, world!")
   |

ARG.py:43:16: ARG002 Unused method argument: `x`
   |
41 |         print("Hello, world!")
42 | 
43 |     def f(cls, x):
   |                ^ ARG002
44 |         print("Hello, world!")
   |

ARG.py:192:24: ARG002 Unused method argument: `x`
    |
190 | ###
191 | class C:
192 |     def __init__(self, x) -> None:
    |                        ^ ARG002
193 |         print("Hello, world!")
    |


