crates/ruff/src/rules/flake8_unused_arguments/snapshots/ruff__rules__flake8_unused_arguments__tests__ARG003_ARG.py.snap
---
source: crates/ruff/src/rules/flake8_unused_arguments/mod.rs
---
ARG.py:47:16: ARG003 Unused class method argument: `x`
   |
46 |     @classmethod
47 |     def f(cls, x):
   |                ^ ARG003
48 |         print("Hello, world!")
   |


