crates/ruff/src/rules/flake8_unused_arguments/snapshots/ruff__rules__flake8_unused_arguments__tests__ARG004_ARG.py.snap
---
source: crates/ruff/src/rules/flake8_unused_arguments/mod.rs
---
ARG.py:51:11: ARG004 Unused static method argument: `cls`
   |
50 |     @staticmethod
51 |     def f(cls, x):
   |           ^^^ ARG004
52 |         print("Hello, world!")
   |

ARG.py:51:16: ARG004 Unused static method argument: `x`
   |
50 |     @staticmethod
51 |     def f(cls, x):
   |                ^ ARG004
52 |         print("Hello, world!")
   |

ARG.py:55:11: ARG004 Unused static method argument: `x`
   |
54 |     @staticmethod
55 |     def f(x):
   |           ^ ARG004
56 |         print("Hello, world!")
   |


