crates/ruff/src/rules/flake8_unused_arguments/snapshots/ruff__rules__flake8_unused_arguments__tests__enforce_variadic_names.snap
---
source: crates/ruff/src/rules/flake8_unused_arguments/mod.rs
expression: diagnostics
---
- kind:
    name: UnusedFunctionArgument
    body: "Unused function argument: `a`"
    commit: ~
    fixable: false
  location:
    row: 1
    column: 6
  end_location:
    row: 1
    column: 7
  fix: ~
  parent: ~
- kind:
    name: UnusedFunctionArgument
    body: "Unused function argument: `b`"
    commit: ~
    fixable: false
  location:
    row: 1
    column: 9
  end_location:
    row: 1
    column: 10
  fix: ~
  parent: ~
- kind:
    name: UnusedFunctionArgument
    body: "Unused function argument: `a`"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 6
  end_location:
    row: 5
    column: 7
  fix: ~
  parent: ~
- kind:
    name: UnusedFunctionArgument
    body: "Unused function argument: `b`"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 9
  end_location:
    row: 5
    column: 10
  fix: ~
  parent: ~
- kind:
    name: UnusedFunctionArgument
    body: "Unused function argument: `args`"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 13
  end_location:
    row: 5
    column: 17
  fix: ~
  parent: ~
- kind:
    name: UnusedFunctionArgument
    body: "Unused function argument: `kwargs`"
    commit: ~
    fixable: false
  location:
    row: 5
    column: 21
  end_location:
    row: 5
    column: 27
  fix: ~
  parent: ~
- kind:
    name: UnusedMethodArgument
    body: "Unused method argument: `a`"
    commit: ~
    fixable: false
  location:
    row: 10
    column: 16
  end_location:
    row: 10
    column: 17
  fix: ~
  parent: ~
- kind:
    name: UnusedMethodArgument
    body: "Unused method argument: `b`"
    commit: ~
    fixable: false
  location:
    row: 10
    column: 19
  end_location:
    row: 10
    column: 20
  fix: ~
  parent: ~
- kind:
    name: UnusedMethodArgument
    body: "Unused method argument: `a`"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 16
  end_location:
    row: 13
    column: 17
  fix: ~
  parent: ~
- kind:
    name: UnusedMethodArgument
    body: "Unused method argument: `b`"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 19
  end_location:
    row: 13
    column: 20
  fix: ~
  parent: ~
- kind:
    name: UnusedMethodArgument
    body: "Unused method argument: `args`"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 23
  end_location:
    row: 13
    column: 27
  fix: ~
  parent: ~
- kind:
    name: UnusedMethodArgument
    body: "Unused method argument: `kwargs`"
    commit: ~
    fixable: false
  location:
    row: 13
    column: 31
  end_location:
    row: 13
    column: 37
  fix: ~
  parent: ~

